[package]
name = "cpf_cnpj"
version = "0.1.1"
authors = ["André Lins <andrelucas01@hotmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Validador de CPF e CNPJ para Rust."
documentation = "https://docs.rs/cpf_cnpj"
keywords = ["cpf", "cnpj", "validador", "validate"]
repository = "https://github.com/andrelmlins/cpf_cnpj"

[badges]
travis-ci = { repository = "andrelmlins/cpf_cnpj" }

[dependencies]
